--- a/assets/practice.html
+++ b/assets/practice.html
@@ -30,11 +30,11 @@
           <div class="row justify-content-center p-3">
             <div class="col-3">
               <div class="card">
-                <div class="card-header text-center">Manager Billy m</div>
+                <div class="card-header text-center">Manager ${data.managerName}</div>
                 <div class="card-body text-primary text-center">
-                  <div>Id:12345</div>
-                  <div>Email:billy@gmail.com</div>
-                  <div>Github:github.com/billy</div>
+                  <div>Id:${data.managerId}</div>
+                  <div>Email:${data.managerEmail}</div>
+                  <div>Github:${data.managerGithub}</div>
                 </div>
               </div>
             </div>
@@ -42,21 +42,21 @@
           <div class="row justify-content-center p-5">
             <div class="col-3">
               <div class="card">
-                <div class="card-header text-center">Engineer bob m</div>
+                <div class="card-header text-center">Engineer ${data.engineerName1}</div>
                 <div class="card-body text-primary text-center">
-                  <div>Id:12333</div>
-                  <div>Email:bob@gmail.com</div>
-                  <div>Github:github.com/bob</div>
+                  <div>Id:${data.engineerId1}</div>
+                  <div>Email:${data.engineerEmail1}</div>
+                  <div>Github:${data.engineerGithub1}</div>
                 </div>
               </div>
             </div>
             <div class="col-3">
               <div class="card">
-                <div class="card-header text-center">Engineer sarah</div>
+                <div class="card-header text-center">Engineer ${data.engineerName2}</div>
                 <div class="card-body text-primary text-center">
-                  <div>Id:12322</div>
-                  <div>Email:sarah@gmail.com</div>
-                  <div>Github:github.com/sarah</div>
+                  <div>Id:${data.engineerId2}</div>
+                  <div>Email:${data.engineerEmail2}</div>
+                  <div>Github:${data.engineerGithub2}</div>
                 </div>
               </div>
             </div>
@@ -64,11 +64,11 @@
           <div class="row justify-content-center p-3">
             <div class="col-3">
               <div class="card">
-                <div class="card-header text-center">Intern Rick m</div>
+                <div class="card-header text-center">Intern ${data.internName}</div>
                 <div class="card-body text-primary text-center">
-                  <div>Id:12222</div>
-                  <div>Email:rick@gmail.com</div>
-                  <div>Github:github.com/rick</div>
+                  <div>Id:${data.internId}</div>
+                  <div>Email:${data.internEmail}</div>
+                  <div>Github:${data.internGithub}</div>
                 </div>
               </div>
             </div>
@@ -76,4 +76,3 @@
         </div>
       </body>
     </html>
-  
